--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
     "express": "^4.16.3",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
